# agent-maaz

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: backup.yml  docker-image.yml  tests.yml
apps/api/: auth.py  ratelimit.py  server.py
apps/core/: documents.py  embeddings.py  memory.py  router.py
apps/skills/: __init__.py
apps/skills/code-review/: SKILL.md
apps/skills/summarize/: SKILL.md
apps/skills/translate/: SKILL.md
apps/tools/: browser.py  calculator.py  clock.py  wikipedia.py
apps/ui/: terminal.py  terminal_client.py
apps/web/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_auth.py  test_browser.py  test_calculator_and_clock.py  test_documents.py  test_embeddings.py  test_function_calling.py  test_memory.py  test_pdf.py  test_plan_and_skills_api.py  test_rag.py  test_ratelimit.py  test_router.py  test_skills.py  test_terminal_client.py  test_web.py  test_wikipedia.py
