[project]
name = "agent-maaz"
version = "0.1.0"
description = "Free open-source AI agent. $0 recurring cost, multi-layer LLM fallback, web + terminal UI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Khalil", email = "msk161999@gmail.com" }
]

dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "textual>=0.50.0",
    "eval-type-backport>=0.4.0; python_version<\"3.10\"",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -p no:cacheprovider"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
